<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.indeed</groupId>
        <artifactId>common-parent</artifactId>
        <version>19</version>
    </parent>

    <artifactId>imhotep</artifactId>
    <version>3.1.110</version>
    <packaging>pom</packaging>

    <name>Imhotep Metapackage</name>
	<url>http://indeedeng.github.io/imhotep/</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/indeedeng/imhotep</url>
    </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.6</version>
      </plugin>
    </plugins>
  </build>

    <repositories>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <repository>
            <id>cloudera</id>
            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
        </repository>
    </repositories>

    <modules>
        <module>imhotep-archive</module>
        <module>imhotep-filesystem</module>
        <module>imhotep-client</module>
        <module>imhotep-server</module>
        <module>imhotep-shardmaster</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <autoVersionSubmodules>true</autoVersionSubmodules>

        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <joda-time.version>2.0</joda-time.version>
        <h2database.version>1.4.191</h2database.version>
        <hikari-cp.version>2.4.6</hikari-cp.version>
        <jooq.version>3.6.4</jooq.version>
        <fastutil.version>6.2.2</fastutil.version>
        <gnu-trove.version>3.0.3</gnu-trove.version>
        <protobuf-java.version>2.5.0</protobuf-java.version>
        <hadoop.version>2.6.0-cdh5.4.8</hadoop.version>
        <zookeeper.version>3.4.5-cdh5.4.8</zookeeper.version>

        <!-- releases of our own projects to use -->
        <indeed-util.version>1.0.24</indeed-util.version>
    </properties>

</project>
